# autotools-seed

./: .gitignore  configure.ac
src/: Makefile.am  factorial.c  factorial.h  main.c
tests/: Makefile.am  factorial-tests.c  pass.sh  project-test.c  xfail.sh
